--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,16 +4,18 @@
     padding: 0px;
     margin: 0px;
 }
-body{
+body, html{
     height: 100vh;
     width: 100vw;
     background: url('../imagens/fundo-madeira.jpg') no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
+    overflow: hidden;
 }
 main{
     position: relative;
     height: 100vh;
+    
 }
 #telefone{
     position: absolute;
@@ -22,8 +24,17 @@ main{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-height: 570px;
+    max-height: 560px;
+    
 
     height: 627px;
     width: 311px;
+}
+iframe#app{
+    position: relative;
+    right: 107px;
+    top: 71px;
+
+    width: 490px;
+    height: 428px;
 }
